<resources>
    <string name="app_name">LoadApp-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id">0</string>
    <string name="notification_channel_name">Downloads Channel</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_image_loading_library">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_current_repository">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_type_safe_http_client_for_android_and_java">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download">Download</string>
    <string name="toast_message">Please select the file to download</string>
    <string name="status">Status:</string>
    <string name="file_name">File name:</string>
    <string name="ok">OK</string>
    <string name="check_status">Check Status</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="paused">Paused</string>
    <string name="pending">Pending</string>
    <string name="running">Running</string>
    <string name="unknown_status">Unknown Status</string>
</resources>
