<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layoutDescription="@xml/main_scene"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/download_icon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/cloud_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/download_icon"
        app:layout_constraintBottom_toTopOf="@id/custom_button">

        <RadioButton
            android:id="@+id/glide_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glide_image_loading_library" />

        <RadioButton
            android:id="@+id/loadapp_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadapp_current_repository" />

        <RadioButton
            android:id="@+id/retrofit_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_type_safe_http_client_for_android_and_java" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:arcColor="@color/colorAccent"
        app:buttonColor="@color/colorPrimary"
        app:progressColor="@color/colorPrimaryDark"
        app:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>